--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5"
   }
 }
