--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tarsilla/react-components",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "engines": {
     "node": ">=20.12.2"
   },
@@ -81,7 +81,10 @@
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-css": "^0.9.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "react-docgen": "^7.0.3",
+    "react-docgen-typescript": "^2.2.2",
     "rollup": "^4.17.2",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
