--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tarsilla/react-components",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "engines": {
     "node": ">=20.12.2"
   },
@@ -90,6 +90,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^8.0.10",
+    "storybook-addon-deep-controls": "^0.6.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0"
   },
