--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@tarsilla/react-components",
-  "version": "0.0.11",
+  "version": "0.0.13",
   "engines": {
-    "node": ">=20.12.2"
+    "node": ">=22"
   },
   "main": "./lib/index.mjs",
   "exports": {
@@ -61,50 +61,39 @@
     "build-storybook": "storybook build"
   },
   "peerDependencies": {
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.4",
+    "@chromatic-com/storybook": "^3.2.4",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/addon-onboarding": "^8.0.10",
-    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/react": "^8.0.10",
-    "@storybook/react-webpack5": "^8.0.10",
-    "@storybook/test": "^8.0.10",
-    "@tarsilla/eslint-config": "^0.0.31",
-    "@types/eslint__js": "^8.42.3",
-    "@types/react": "^18.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-css": "^0.9.2",
-    "eslint-plugin-storybook": "^0.8.0",
-    "react-docgen": "^7.0.3",
-    "react-docgen-typescript": "^2.2.2",
-    "rollup": "^4.17.2",
-    "rollup-plugin-dts": "^6.1.0",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@storybook/addon-essentials": "^8.5.3",
+    "@storybook/addon-interactions": "^8.5.3",
+    "@storybook/blocks": "^8.5.3",
+    "@storybook/react": "^8.5.3",
+    "@storybook/react-vite": "^8.5.3",
+    "@storybook/test": "^8.5.3",
+    "@tarsilla/eslint-config": "^0.0.36",
+    "rollup": "^4.34.4",
+    "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "storybook": "^8.0.10",
-    "storybook-addon-deep-controls": "^0.6.2",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
+    "rollup-plugin-tsconfig-paths": "^1.5.2",
+    "storybook": "^8.5.3",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0"
   },
   "dependencies": {
-    "debounce": "^2.0.0",
-    "react-hook-form": "^7.51.4",
-    "react-icons": "^5.2.1",
-    "react-select": "^5.8.0",
-    "react-tabs": "^6.0.2",
-    "react-toastify": "^10.0.5"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "debounce": "^2.2.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-select": "^5.10.0",
+    "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.3"
   }
 }
