--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tarsilla/react-components",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "engines": {
     "node": ">=22"
   },
@@ -9,36 +9,43 @@
     ".": {
       "types": "./lib/index.d.ts",
       "require": "./lib/index.cjs",
+      "import": "./lib/index.mjs",
       "default": "./lib/index.mjs"
     },
     "./loading": {
       "types": "./lib/loading/index.d.ts",
       "require": "./lib/loading/index.cjs",
+      "import": "./lib/loading/index.mjs",
       "default": "./lib/loading/index.mjs"
     },
     "./select": {
       "types": "./lib/select/index.d.ts",
       "require": "./lib/select/index.cjs",
+      "import": "./lib/select/index.mjs",
       "default": "./lib/select/index.mjs"
     },
     "./tab": {
       "types": "./lib/tab/index.d.ts",
       "require": "./lib/tab/index.cjs",
+      "import": "./lib/tab/index.mjs",
       "default": "./lib/tab/index.mjs"
     },
     "./text": {
       "types": "./lib/text/index.d.ts",
       "require": "./lib/text/index.cjs",
+      "import": "./lib/text/index.mjs",
       "default": "./lib/text/index.mjs"
     },
     "./textarea": {
       "types": "./lib/textarea/index.d.ts",
       "require": "./lib/textarea/index.cjs",
+      "import": "./lib/textarea/index.mjs",
       "default": "./lib/textarea/index.mjs"
     },
     "./toast": {
       "types": "./lib/toast/index.d.ts",
       "require": "./lib/toast/index.cjs",
+      "import": "./lib/toast/index.mjs",
       "default": "./lib/toast/index.mjs"
     },
     "./package.json": "./package.json"
@@ -54,44 +61,38 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "clean": "rm -rf ./lib",
-    "build": "npm run clean && rollup -c --bundleConfigAsCjs",
+    "build": "npm run clean && rollup -c",
     "prepub": "npm run build",
     "pub": "npm publish --access public",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "peerDependencies": {
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@storybook/addon-essentials": "^8.5.3",
-    "@storybook/addon-interactions": "^8.5.3",
-    "@storybook/blocks": "^8.5.3",
-    "@storybook/react": "^8.5.3",
-    "@storybook/react-vite": "^8.5.3",
-    "@storybook/test": "^8.5.3",
-    "@tarsilla/eslint-config": "^0.0.36",
-    "rollup": "^4.34.4",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-tsconfig-paths": "^1.5.2",
-    "storybook": "^8.5.3",
-    "typescript": "^5.7.3",
-    "vite": "^6.1.0"
+    "@storybook/addon-essentials": "^8.5.8",
+    "@storybook/addon-interactions": "^8.5.8",
+    "@storybook/blocks": "^8.5.8",
+    "@storybook/react": "^8.5.8",
+    "@storybook/react-vite": "^8.5.8",
+    "@storybook/test": "^8.5.8",
+    "@tarsilla/eslint-config": "^0.0.43",
+    "@tarsilla/rollup-config": "^0.0.5",
+    "storybook": "^8.5.8",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "debounce": "^2.2.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-select": "^5.10.0",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.3"
