--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "nodenext",
     "target": "ESNext",
-    "lib": ["DOM", "ESNext"],
-    "moduleResolution": "Node",
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
-    "outDir": "./lib",
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "jsx": "react-jsx",
-    "allowJs": true
+    "jsxImportSource": "@emotion/react"
   },
-  "exclude": ["lib"]
+  "exclude": ["lib", ".storybook"]
 }
