--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,17 +1,25 @@
 name: Publish to npm
 
 on:
-  push:
-    branches:
-      - "main"
+  workflow_run:
+    workflows: ["Code Analysis"]
+    types:
+      - completed
 
 permissions:
-  contents: read
-  id-token: write
+  contents: read # for checkout
 
 jobs:
   publish:
+    name: Publish
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for npm provenance
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,7 +33,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build
+        run: npm run build
+
       - name: Publish to npm
-        run: npm run pub
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
