feat(react19): fix build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "module": "nodenext",
     "target": "ESNext",
     "moduleResolution": "nodenext",
+    "lib": ["DOM", "ESNext"], 
+    "types": ["react", "react-dom"],
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
