feat(release)!: major

--- a/package.json
+++ b/package.json
@@ -71,8 +71,6 @@
     "lint:fix": "eslint --fix .",
     "clean": "rm -rf ./lib",
     "build": "npm run clean && rollup -c",
-    "prepub": "npm run build",
-    "pub": "npm publish --access public",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "husky"
@@ -94,26 +92,18 @@
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.5",
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@semantic-release/release-notes-generator": "^14.0.3",
-    "@storybook/addon-essentials": "^8.6.4",
-    "@storybook/addon-interactions": "^8.6.4",
-    "@storybook/blocks": "^8.6.4",
-    "@storybook/react": "^8.6.4",
-    "@storybook/react-vite": "^8.6.4",
-    "@storybook/test": "^8.6.4",
-    "@tarsilla/eslint-config": "^0.2.2",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@storybook/addon-essentials": "^8.6.11",
+    "@storybook/addon-interactions": "^8.6.11",
+    "@storybook/blocks": "^8.6.11",
+    "@storybook/react": "^8.6.11",
+    "@storybook/react-vite": "^8.6.11",
+    "@storybook/test": "^8.6.11",
+    "@tarsilla/commit-wizard": "^1.2.3",
+    "@tarsilla/eslint-config": "^1.1.0",
     "@tarsilla/rollup-config": "^0.0.10",
-    "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
-    "semantic-release": "^24.2.3",
-    "storybook": "^8.6.4",
+    "storybook": "^8.6.11",
     "typescript": "^5.8.2"
   }
 }
