fix(permission): add workflow permission

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,6 +8,7 @@ jobs:
       security-events: write
       contents: write
       id-token: write
+      pages: write
     uses: tarsilla-app/workflows/.github/workflows/node.yml@main
     with:
       suppression: true
