--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -24,7 +24,9 @@ jobs:
       name: github-pages
       url: ${{ needs.ci-cd.outputs.pages_url }}
     steps:
-      - name: Print Pages URL
-        run: "echo 'Deployed Pages URL: ${{ needs.ci-cd.outputs.deploy-storybook.pages_url }}'"
+      - name: Print Results
+        run: "echo '${{toJson( needs.ci-cd.result) }}'"
       - name: Print Outputs
-        run: "echo 'Deployed Pages URL: ${{toJson( needs.ci-cd.outputs) }}'"
+        run: "echo '${{toJson( needs.ci-cd.outputs) }}'"
+      - name: Print entire needs.ci-cd
+        run: "echo '${{toJson( needs.ci-cd) }}'"
